<?xml version="1.0"?>
<package>
  <name>image_tools</name>
  <version>0.0.0</version>
  <description>The image_tools package</description>

  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

  <export>
  </export>
</package>
